app/_assets/stylesheets/footer.less
/**
 * components.less
 * all imported and shared components
 * used across the site
 */

@import "variables";
@import "utils";

/* =======================================================
   MARKETING -> FOOTER
   ==================================================== */

// Subscribe Form
.footer-form-container {
  display: flex;
  flex-direction: row;

  #subscribe-input {
    width: 70%;
    height: 40px;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 16px;
  }

  #footer-form-button {
    width: 25%;
    font-size: 16px;
    font-weight: normal;
    color: #fff;
    background-color: #1155cb;
    height: 40px;
    display: inline-block;
    right: 20px;
    top: 0;
    padding-left: 15px;
    padding-right: 15px;
    border: 1px solid #1155cb;

    &:hover {
      background: #1155cb;
      color: #fff;
    }
  }

  @media (max-width: 1200px) {
    #footer-form-button {
      padding-left: 5px;
      padding-right: 5px;
    }
  }

  @media (max-width: 1045px) {
    #footer-form-button {
      font-size: 14px;
    }
  }

  @media (max-width: 992px) {
    #subscribe-input {
      width: 390px;
    }
    #footer-form-button {
      font-size: 16px;
    }
  }

  @media (max-width: 875px) {
    #subscribe-input {
      width: 300px;
      margin-right: 20px;
    }
  }

  @media (max-width: 420px) {
    #subscribe-input {
      width: 160px;
    }
    #footer-form-button {
      width: 80px;
      padding-left: 5px;
      padding-right: 5px;
      font-size: 14px;
    }
  }
}

/**
 * Main footer selector
 */

[class^="marketing-footer"] {
  font-family: @family-display;
  width: 100%;
  padding: @gutter-flex-2x 0 0;

  .form iframe {
    min-height: 50px;
    min-width: 500px;
    transform: translateY(-12.5px);
  }

  @media (max-width: 480px) {
    .form iframe {
      min-height: 110px;
      min-width: 0px;
    }
  }

  section {
    > ul {
      .flex-row;
      list-style: none;

      &.newsletter {
        justify-content: space-between;

        @media (min-width: @grid-width-xl) {
          gap: 50px;
        }
      }

      @media (min-width: @grid-width-xs) {
        max-width: 85%;
        padding: 0;
      }
      @media (min-width: @grid-width-sm) {
        width: 95%;
        max-width: 1280px;
      }

      > li {
        #subscription_form .error-message.message {
          display: inline-block;
          width: 100%;
          clear: both;
          position: absolute;
          bottom: -20px;
          left: 0;
          @media (max-width: 480px) {
            bottom: -25px;
          }
        }

        form {
          display: flex;
          flex-wrap: wrap;
          justify-content: space-between;
          width: 100%;
          margin-top: 1rem;
          margin-bottom: 10px;
          @media (max-width: 480px) {
            margin-bottom: 20px;
          }
          input[type="text"] {
            display: inline-block;
            float: left;
            height: 40px;
            margin-right: 7.5px;
            font-size: 16px;
            max-width: 225px;
            margin-bottom: 0;
            @media (max-width: 480px) {
              max-width: 100% !important;
              width: 100%;
              margin-bottom: 5px;
            }
          }
          input.button {
            background: #17a956;
            height: 40px;
            color: #fff;
            border-radius: 3px;
            font-size: 16px;
            font-weight: 400;
            font-family: Roboto;
            padding-left: 15px;
            padding-right: 15px;
            position: absolute;
            @media (max-width: 480px) {
              position: relative;
              display: inline-block;
              width: 100%;
              clear: both;
            }
          }
          .success-message.message {
            float: left;
            display: inline-block;
            clear: both;
            margin-top: 5px;
            color: #409ecb;
          }
        }
        .footer-title {
          font-weight: 700;
          font-size: 14px;
          line-height: 1.3;
          letter-spacing: 1.5px;
          text-transform: uppercase;
          color: #062f4d;
          margin-bottom: 20px;
        }
        .footer-category {
          color: #666c70;
          -webkit-transform: none;
          transform: none;
          font-size: 14px;
          font-weight: 700;
          margin-bottom: 1rem;
          letter-spacing: 0.5px;
          text-transform: uppercase;
          padding-bottom: 0.6em;
          border-bottom: 1px solid #d3d5da;
          line-height: 1.3;
          letter-spacing: 1.5px;
        }
        a {
          font-size: 15px;
          span {
            display: inline-block;
            padding: 5px 7.5px;
            margin-left: 5px;
            color: #008aeb;
            background: #d0eaff;
            border-radius: 5px;
            font-weight: 400;
            font-size: 12px;
            line-height: 1;
            text-transform: uppercase;
          }
        }

        &.logo-wrapper {
          max-width: 400px;
          p {
            margin-bottom: 20px;
            color: #666c70;
            font-weight: 400;
            font-size: 15px;
            line-height: 1.4;
          }
        }

        @media (max-width: 960px) {
          &.logo-wrapper {
            input[type="text"] {
              display: inline-block;
              float: left;
              height: 40px;
              margin-right: 7.5px;
              font-size: 16px;
              max-width: calc(~"100% - 125px");
              width: 100%;
              min-width: 200px;
              margin-bottom: 0;
            }
          }
        }

        @media (max-width: 992px) {
          &.logo-wrapper {
            max-width: 400px;
          }
          &:not(.logo-wrapper) {
            padding-top: 0px;
          }
        }
        @media (max-width: 630px) {
          a {
            font-size: 12px;
            span {
              display: none;
            }
          }
          &.logo-wrapper {
            padding-left: 0;
            ul {
              margin-bottom: 0;
            }
          }
          &:not(.logo-wrapper) {
            padding-top: 0;
            margin-bottom: 0;
            padding-left: 0;
            padding-right: 0.5rem;
            box-sizing: border-box;
          }
        }
      }
    }
  }

  /**
   * Marketing > Footer > Content
   */

  .logo-wrapper {
    margin: 0.5rem 0 @gutter-flex-1x 0;
  }
  .logo {
    max-width: 120px;

    a {
      display: block;
    }
    img {
      width: 100%;
      max-height: 100%;
      border: 0;
      margin-bottom: 20px;
    }
  }

  /*
    * Footer links
    */

  nav {
    ul,
    li {
      padding-left: 0;
      margin: 0;
      list-style: none;
    }
    ul {
      margin-bottom: 2em;
    }
    li {
      margin-bottom: 0.5rem;
    }
  }

  /**
   * Marketing > Footer > Legal
   */

  .legal {
    font-size: 15px;

    .container {
      max-width: 100%;
      padding: 15px 0px;
      display: flex;
      justify-content: space-between;
      align-items: center;

      @media (max-width: 600px) {
        flex-wrap: wrap;
        flex-direction: column;
      }

      > div {
        color: #004b80;
        display: flex;

        @media (max-width: 600px) {
          text-align: center;

          &.social {
            min-width: 0px;
            width: auto;
            display: block;
            margin: 10px auto 0;
          }
        }

        @media (max-width: 768px) {
          left: 0;
        }

        &:not(.social) {
          left: auto;
          right: 16px;
          @media (max-width: 768px) {
            right: 0;
          }
        }
      }
    }
    @media (min-width: 1279px) {
      .container {
        width: 1250px;
      }
    }
    @media (min-width: 1379px) {
      .container {
        width: 1320px;
      }
    }
    .social-link {
      width: auto;
      min-width: auto;
      display: inline-block;
      float: left;

      a:not(.btn-gh),
      i {
        color: #7d91b3;
        font-size: 20px;
        margin-right: 5px;

        &:hover {
          color: #5c7299;
        }
      }

      a.btn-gh {
        text-decoration: none;
        text-shadow: 0 1px 0 #fff;
        font: 700 11px/14px "Helvetica Neue", Helvetica, Arial, sans-serif;
        cursor: pointer;
        display: flex;
        margin-top: 7px;
        i {
          margin-right: 0px;
          font-size: 17px;
        }
      }
    }
    ul {
      .flex-row();
      list-style: none;
      height: 100%;

      &:before {
        content: "";
        display: block;
        width: 100%;
        margin-bottom: 1rem;
      }

      @media (min-width: @grid-width-xs) {
        max-width: 85%;
        padding: 0;
      }
      @media (min-width: @grid-width-sm) {
        max-width: 1020px;
      }

      li {
        width: 100%;
        display: inline-block;
        text-align: center;
        a {
          letter-spacing: 0.5;
        }
        b {
          color: #ccc;
          display: inline-block;
          margin: 0 10px;
        }
      }
    } // end social link
  } // end legal
} // end Footer component

[class^="marketing-footer"][class*="--light-gray"] {
  border-top: solid 1px #ccc;
  background-color: #fff;
  overflow: hidden;

  .footer-columns {
    display: flex;
    flex-grow: 2;

    @media (min-width: @grid-width-xl) {
      padding-top: 72px;
    }
  }

  .footer-columns-product-list {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 0;
    list-style: none;
    gap: 25px;
    flex-wrap: wrap;
    width: 100%;
    padding-left: 0;

    @media (max-width: 430px) {
      flex-direction: column;
    }

    @media (max-width: @grid-width-md) {
      gap: 0;
    }

    > li {
      flex-grow: 1;

      @media (max-width: 430px) {
        width: 100%;
      }

      @media (min-width: 430px) and (max-width: @grid-width-md) {
        width: 50%;
      }
    }
  }

  nav {
    a {
      color: #35363a;
      text-decoration: none;
      .font-size(22);
      font-weight: 400;
    }
    a:hover {
      text-shadow: .4px 0 0 currentcolor,-.4px 0 0 currentcolor,0 .2px 0 currentcolor,0 -.2px 0 currentcolor;
    }
  }

  .legal {
    background: #f7f9fc;
    color: #004b80;

    ul {
      text-align: center;

      a {
        color: #004b80;
      }
    }
  }
}

